@@ -1,4 +1,5 @@
 0.6.2 - currently working on
+- [#3320] Fix: Unbreak GMX by changing the default encoding for e-mails from base64 back to quoted-printable
 - [#3319] Change: Use only LF in the e-mail body
 - [#3250] Change: Throw an exception when trying to save a model that has been created using getNewGhost or getLoadedTestingModel
 - [#920] Fix: Umlauts in sender names are broken
